adding join example

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 	<head th:fragment="head (title)">
-		<title th:text="${title}">Fragments</title>
+		<title th:text="${title}">Librehealth FHIR Analytics</title>
 		<link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"
 			href="../../css/bootstrap.min.css" />
 	</head>
