--- a/src/main/resources/templates/messages/list.html
+++ b/src/main/resources/templates/messages/list.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 	<head th:replace="fragments :: head(title=~{::title/text()})">
-		<title>Messages : View all</title>
+		<title>FHIR Analytics</title>
 	</head>
 	<body>
 		<div class="container">
 			<div th:replace="fragments :: navbar"></div>
 			<div class="float-right mt-2">
-				<a class="btn btn-primary btn-sm" href="form.html" th:href="@{/(form)}">Create Message</a>
+				<a class="btn btn-primary btn-sm" href="form.html" th:href="@{/(form)}">Enter Query SQL</a>
 			</div>
 			<h4 class="float-left mt-2">Messages : View all</h4>
 			<table class="table table-bordered table-striped">
