--- a/src/main/resources/templates/messages/view.html
+++ b/src/main/resources/templates/messages/view.html
@@ -1,27 +1,21 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 	<head th:replace="fragments :: head(title=~{::title/text()})">
-		<title>Messages : View</title>
+		<title>Libre Health FHIR Analytics</title>
 	</head>
 	<body>
-		<div class="container">
-			<div th:replace="fragments :: navbar"></div>
-			<div class="float-right mt-2">
-				<a class="btn btn-primary btn-sm" href="list.html" th:href="@{/}">Messages</a>
-			</div>
-			<h4 class="float-left mt-2">Messages : View</h4>
-			<div class="clearfix"></div>
-			<div class="alert alert-success" th:if="${globalMessage}" th:text="${globalMessage}">Some Success message
-			</div>
-			<div class="card">
-				<div class="card-body">
-					<h4 class="card-title" th:text="${message.id + ': ' + message.summary}">123 - A short summary...</h4>
-					<h6 class="card-subtitle mb-2 text-muted" th:text="${#calendars.format(message.created)}">July 11, 2012 2:17:16 PM CDT</h6>
-					<p class="card-text" th:text="${message.text}">A detailed message that is longer than the summary.</p>
-					<a class="card-link" href="messages" th:href="@{'/delete/' + ${message.id}}">delete</a>
-					<a class="card-link" href="form.html" th:href="@{'/modify/' + ${message.id}}"> modify</a>
-				</div>
-			</div>
+	<div class="container">
+		<div th:replace="fragments :: navbar"></div>
+		<div class="float-right mt-2">
+			<a class="btn btn-primary btn-sm" th:href="@{/}" href="messages.html"> Query SQL </a>
 		</div>
+		<form id="messageForm" th:action="@{/(form)}" th:object="${message}" action="#" method="post">
+			<div class="form-group">
+				<label for="text">Message</label>
+				<textarea th:field="*{text}" th:class="${'form-control' + (#fields.hasErrors('text') ? ' is-invalid' : '')}"></textarea>
+			</div>
+			<button type="submit" class="btn btn-primary">Submit</button>
+		</form>
+	</div>
 	</body>
 </html>
