fixing dependency issues

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -2,12 +2,12 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title th:text="${title}">Title</title>
-    <script type="text/javascript" src="/js/jquery-3.3.1.min.js"></script>
-    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}" href="../../css/bootstrap.min.css"/>
-    <link rel="stylesheet" th:href="@{/css/common.css}" href="../../css/common.css"/>
-    <script type="text/javascript" src="/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="/js/application.js"></script>
-    <script type="text/javascript" src="/js/handlebars.min.js"></script>
+    <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
+    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}" href="/css/bootstrap.min.css"/>
+    <link rel="stylesheet" th:href="@{/css/common.css}" href="/css/common.css"/>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/application.js"></script>
+    <script type="text/javascript" src="js/handlebars.min.js"></script>
 </head>
 <body>
 <div class="container">
