--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -10,14 +10,14 @@
 
 	<title>Log in with your account</title>
 
-	<link href="../../css/bootstrap.min.css" rel="stylesheet">
-	<link href="../../css/common.css" rel="stylesheet">
+	<link href="css/bootstrap.min.css" rel="stylesheet">
+	<link href="css/common.css" rel="stylesheet">
 
 	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 	<!--[if lt IE 9]>
 	<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 	<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-	<script type="text/javascript" src="../../js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="js/bootstrap.min.js"></script>
 	<![endif]-->
 </head>
 
