add UI changes for search resources

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -135,7 +135,7 @@
         <div role="tabpanel" class="tab-pane fade" id="sql">
             <div class="container">
                 <div class="form-group">
-                    <label for="sparksql">Spark SQL Query</label>
+                    <label for="sparksql">Spark Query</label>
                     <textarea class="form-control" id="sparksql" rows="3"></textarea>
                     <button style="float: right;" class="btn btn-outline-success my-2 my-sm-0 btn-primary-spacing"
                             id="sparksqlbtn">Submit
