add UI changes for search resources

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -178,7 +178,7 @@
                 </h5>
             </div>
             <div id="diagnostic-report-overview" class="panel-collapse collapse show">
-                <div class="card">
+                <div class="card-body">
                     <table class="table">
                         <tr>
                             <td>
