--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -58,6 +58,9 @@
         <li class="nav-item">
             <a class="nav-link" href="#sql" role="tab" data-toggle="tab">SQL</a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#uploadTab" role="tab" data-toggle="tab">Upload</a>
+        </li>
     </ul>
 
     <!-- Tab panes -->
@@ -144,6 +147,34 @@
             </div>
             <div class="container">
                 <div id="results"></div>
+            </div>
+        </div>
+        <div role="tabpanel" class="tab-pane fade" id="uploadTab">
+            <div class="container">
+                <div class="form-group">
+                    <button type="button" class="btn btn-info" data-toggle="modal" data-target="#uploadModal">Upload Data</button>
+
+                    <!-- Modal -->
+                    <div id="uploadModal" class="modal fade" role="dialog">
+                        <div class="modal-dialog">
+
+                            <!-- Modal content-->
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                    <h4 class="modal-title">FHIR Data Upload Form</h4>
+                                </div>
+                                <div class="modal-body">
+                                    <!-- Form -->
+                                    <form method='post' action='upload' enctype="multipart/form-data" id="uploadForm">
+                                        Select file : <input  class='btn btn-info form-control' type='file' name='file' id='file' ><br>
+                                        <input type='button' style="margin-top: 5px" class='btn btn-info' onClick='submitForm()' value='Upload' id='upload'>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
